--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.jpa.properties.hibernately.dialect=org.hibernate.dialect.MySQL8Dialect
 
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.Type = TRACE
+
+spring.servlet.multipart.max-file-size = 5MB
+spring.servlet.multipart.max-request-size = 5MB
