--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,10 @@ spring.thymeleaf.enabled=true
 #security.basic.enabled=false
 
 # spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3308/ems_database
+spring.datasource.url=jdbc:mysql://localhost:3306/ems
 
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=user
+spring.datasource.password=0000
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
