--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,16 @@ logging.level.org.hibernate.Type = TRACE
 
 spring.servlet.multipart.max-file-size = 5MB
 spring.servlet.multipart.max-request-size = 5MB
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ntankeuagnescarmela@gmail.com
+spring.mail.password=fotv mcpn wszg qgnj
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+# spring.mail.properties.mail.smtp.starttls.required=true
+# spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+# spring.mail.properties.mail.smtp.connectiontimeout=5000
+# spring.mail.properties.mail.smtp.timeout=5000
+# spring.mail.properties.mail.smtp.writetimeout=5000
