--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,11 @@
     <artifactId>hibernate-validator</artifactId>
     <version>7.0.1.Final</version> </dependency>
 
-
+<dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+      <version>2.5.0</version>
+   </dependency>
 
 	</dependencies>
 
