modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/configurations/SecurityConfig.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/budgetRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/contactRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/eventRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/expenseRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/taskRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/userRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/venueRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/venueServiceImpl.java 	modified:   src/main/resources/application.properties 	modified:   src/main/resources/static/js/eventTab.js 	modified:   src/main/resources/static/js/lists.js 	modified:   src/main/resources/templates/eventTab.html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,9 @@ spring.jpa.open-in-view=false
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernately.dialect=org.hibernate.dialect.MySQL8Dialect
 
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
 logging.level.org.hibernate.SQL = DEBUG
 logging.level.org.hibernate.Type = TRACE
 
